# rxtui

./: .gitignore  .pre-commit-config.yaml  API_REFERENCE.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  DOCS.md  IMPLEMENTATION.md  QUICK_REFERENCE.md  README.md  TUTORIAL.md
examples/: README.md  align.rs  components.rs  counter.rs  demo.rs  div_alignment.rs  form.rs  hover.rs  progressbar.rs  rxtui.rs  scroll.rs  scroll2.rs  scroll_nested.rs  spinner.rs  spinner_custom.rs  stopwatch.rs  textinput.rs  timer.rs  wrap_alignment.rs
examples/demo_pages/: mod.rs  page10_unicode.rs  page12_focus.rs  page14_text_input.rs  page15_scrollable.rs  page16_text_alignment.rs  page1_overflow.rs  page2_direction.rs  page3_percentages.rs  page4_borders.rs  page5_absolute.rs
rxtui/: Cargo.toml  README.md  test_deletion.md
rxtui-macros/: Cargo.toml  README.md
rxtui-macros/src/: lib.rs
rxtui/examples/: components.rs  demo.rs  effects_timer.rs  simple.rs  test_spread_simple.rs  timer.rs
rxtui/examples/demo_pages/: page10_unicode.rs  page11_content_sizing.rs  page12_focus.rs  page13_rich_text.rs  page14_text_input.rs  page15_scrollable.rs  page1_overflow.rs  page2_direction.rs  page3_percentages.rs  page4_borders.rs  page5_absolute.rs  page6_text_styles.rs  page7_auto_sizing.rs  page8_text_wrap.rs  page9_element_wrap.rs
rxtui/lib/: bounds.rs  buffer.rs  component.rs  diff.rs  lib.rs  prelude.rs  providers.rs  style.rs  terminal.rs  utils.rs  vdom.rs  vnode.rs
rxtui/lib/app/: config.rs  context.rs  core.rs  events.rs  mod.rs  renderer.rs
rxtui/lib/components/: mod.rs  spinner.rs  text_input.rs
rxtui/lib/effect/: mod.rs  runtime.rs  types.rs
rxtui/lib/macros/: internal.rs  mod.rs  node.rs  tui.rs
rxtui/lib/node/: div.rs  mod.rs  rich_text.rs  text.rs
rxtui/lib/render_tree/: mod.rs  node.rs  tree.rs
rxtui/lib/render_tree/tests/: layout_tests.rs  mod.rs  rich_text_tests.rs  sizing_tests.rs  wrapping_tests.rs
rxtui/tests/: macro_tests.rs
termtui/: Cargo.toml
termtui-macros/: Cargo.toml
termtui-macros/src/: lib.rs
termtui/examples/: components.rs  demo.rs  simple.rs
termtui/examples/demo_pages/: page10_unicode.rs  page11_content_sizing.rs  page12_focus.rs  page13_rich_text.rs  page14_text_input.rs  page15_scrollable.rs  page1_overflow.rs  page2_direction.rs  page3_percentages.rs  page4_borders.rs  page5_absolute.rs  page6_text_styles.rs  page7_auto_sizing.rs  page8_text_wrap.rs  page9_element_wrap.rs
termtui/lib/: buffer.rs  diff.rs  key.rs  lib.rs  prelude.rs  terminal.rs  vdom.rs
termtui/lib/app/: renderer.rs
termtui/lib/components/: mod.rs  text_input.rs
termtui/lib/macros/: mod.rs  tui.rs
termtui/lib/node/: rich_text.rs  text.rs
termtui/lib/render_tree/: tree.rs
termtui/lib/tests/: rich_text_tests.rs
termtui/tests/: macro_tests.rs
