[workspace]
resolver = "2"
members = [
    "termtui",
    "termtui-macros",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Radical Team"]
license = "Apache-2.0"
repository = "https://github.com/microsandbox/termtui"
homepage = "https://github.com/microsandbox/termtui"
documentation = "https://docs.rs/termtui"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"

# Profile configurations
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
