[package]
name = "rxtui-workspace"
version = "0.1.0"
edition = "2021"
publish = false

[features]
default = ["effects"]
effects = ["rxtui/effects"]

[[example]]
name = "timer"
path = "examples/timer.rs"

[workspace]
resolver = "2"
members = [
    "rxtui",
    "rxtui-macros",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Microsandbox Team"]
license = "Apache-2.0"
repository = "https://github.com/microsandbox/rxtui"
homepage = "https://github.com/microsandbox/rxtui"
documentation = "https://docs.rs/rxtui"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"

[dependencies]
rxtui = { path = "rxtui", features = ["effects"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "time", "sync", "macros"] }

# Profile configurations
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
