[package]
name = "rxtui-macros"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/rxtui-macros"
description = "Procedural macros for the rxtui terminal UI framework"
keywords = ["tui", "terminal", "macro", "proc-macro"]
categories = ["command-line-interface"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
